test: preserve mechanical identity for large results